# Nociones-basicas-entrega

./: CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  funciones.cpp  funciones.h  main.cpp  nuevo.cpp
untitled/: CMakeLists.txt  Estudiante.h  Persona.cpp  Persona.h  estudiante.cpp  main.cpp
